--- a/network/요약.md
+++ b/network/요약.md
@@ -57,7 +57,7 @@ console.log("name:", url.searchParams.get("name"));
 # 3. HTTP
 
 - HTTP(HyperText Transfer Protocol) : 클라이언트와 서버 간에 데이터를 주고받기 위한 약속(프로토콜)입니다.
-- 프로토콜: 약속, 통신 규약입니다. 예를 들어, 제가 다빈님하고 대화를 할 때, 한국어로 대화를 합니다. 이때, 한국어가 프로토콜이라고 할 수 있습니다.
+- 프로토콜: 약속, 통신 규약입니다.
 - HTTP란 한 마디로 무엇이냐? '문자열 약속'이라고 할 수 있습니다.
 - HTTP는 무상태(stateless) 프로토콜입니다. 즉, 이전 요청과 다음 요청이 서로 연결되어 있지 않습니다.
 
